[gd_scene load_steps=48 format=2]

[ext_resource path="res://MinecraftFive-Bold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://sprites/heart.png" type="Texture" id=2]
[ext_resource path="res://sprites/heartempty.png" type="Texture" id=3]
[ext_resource path="res://sprites/heartBlue.png" type="Texture" id=4]
[ext_resource path="res://sprites/plus.png" type="Texture" id=5]
[ext_resource path="res://sprites/plusUnder.png" type="Texture" id=6]
[ext_resource path="res://sprites/plusBlue.png" type="Texture" id=7]
[ext_resource path="res://scripts/HUD.gd" type="Script" id=8]
[ext_resource path="res://scripts/HealthBarManager.gd" type="Script" id=9]
[ext_resource path="res://sprites/MM-ObjectSpawnerBG.png" type="Texture" id=10]
[ext_resource path="res://LinkText.tres" type="DynamicFont" id=11]
[ext_resource path="res://scenes/UIs/MainMenuNewNewTheme.tres" type="Theme" id=12]
[ext_resource path="res://sprites/ObjectSpawnerIcons/OP-Mods.png" type="Texture" id=13]
[ext_resource path="res://sprites/ObjectSpawnerIcons/OP-Weapons.png" type="Texture" id=14]
[ext_resource path="res://sprites/ObjectSpawnerIcons/OP-Interacts.png" type="Texture" id=15]
[ext_resource path="res://sprites/ObjectSpawnerIcons/OP-Mobs.png" type="Texture" id=16]
[ext_resource path="res://sprites/ObjectSpawnerIcons/OP-Blocks.png" type="Texture" id=17]
[ext_resource path="res://scripts/OPTab.gd" type="Script" id=18]
[ext_resource path="res://sprites/1 rat.jpg" type="Texture" id=19]
[ext_resource path="res://scripts/Tab.gd" type="Script" id=20]
[ext_resource path="res://scripts/ObjectSpawner.gd" type="Script" id=21]
[ext_resource path="res://sprites/woodblockIconActual.png" type="Texture" id=22]
[ext_resource path="res://sprites/brickblockiconNew.png" type="Texture" id=23]
[ext_resource path="res://scenes/blocks/woodBlock.tscn" type="PackedScene" id=24]
[ext_resource path="res://sprites/IceBlockIconNewButCooler.png" type="Texture" id=25]
[ext_resource path="res://scenes/blocks/brick.tscn" type="PackedScene" id=26]
[ext_resource path="res://scenes/blocks/iceBlock.tscn" type="PackedScene" id=27]
[ext_resource path="res://sprites/steelblockiconNew.png" type="Texture" id=28]
[ext_resource path="res://scenes/blocks/steelBlock.tscn" type="PackedScene" id=29]
[ext_resource path="res://sprites/reinforcedsteelblockiconNew.png" type="Texture" id=30]
[ext_resource path="res://scenes/blocks/reinforcedSteelBlock.tscn" type="PackedScene" id=31]
[ext_resource path="res://sprites/cheeseiconNew.png" type="Texture" id=32]
[ext_resource path="res://scenes/blocks/cheese.tscn" type="PackedScene" id=33]
[ext_resource path="res://sprites/boomboxiconNew.png" type="Texture" id=34]
[ext_resource path="res://scenes/blocks/Radio.tscn" type="PackedScene" id=35]
[ext_resource path="res://scenes/blocks/reflectionBlock.tscn" type="PackedScene" id=36]
[ext_resource path="res://sprites/`placeholdertexture.png" type="Texture" id=37]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.45098, 0.815686, 0.407843, 1 )
skew = Vector2( 0.2, 0 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0.215686, 0.588235, 0.368627, 1 )
border_blend = true
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.294118, 0.101961, 0.101961, 0.384314 )
skew = Vector2( 0.2, 0 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0.184314, 0.0431373, 0.109804, 1 )
border_blend = true
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.760784, 0.921569, 0.968627, 1 )
skew = Vector2( 0.2, 0 )
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color( 0.407843, 0.556863, 0.815686, 1 )
border_blend = true
shadow_color = Color( 0.254902, 0, 1, 0.498039 )
shadow_size = 1
anti_aliasing = false

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="DynamicFont" id=5]
size = 30
outline_size = 1
outline_color = Color( 0, 0, 0, 0.482353 )
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.470588, 0.862745, 0.556863, 1 )

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.364706, 0.32549, 0.819608, 1 )

[sub_resource type="Shader" id=9]
code = "shader_type canvas_item;

uniform float lod: hint_range(0.0, 5) = 0.0;

void fragment(){
	vec4 color = texture(SCREEN_TEXTURE, SCREEN_UV, lod);
	COLOR = color;
}"

[sub_resource type="ShaderMaterial" id=10]
shader = SubResource( 9 )
shader_param/lod = 0.8

[node name="UI" type="CanvasLayer"]
script = ExtResource( 8 )

[node name="HealthBars" type="Node2D" parent="."]
script = ExtResource( 9 )

[node name="Bar" type="Node2D" parent="HealthBars"]

[node name="HealthBar" type="ProgressBar" parent="HealthBars/Bar"]
margin_left = 17.0
margin_top = 563.0
margin_right = 271.0
margin_bottom = 588.0
custom_styles/fg = SubResource( 1 )
custom_styles/bg = SubResource( 2 )
value = 75.0
percent_visible = false

[node name="ShieldBar" type="ProgressBar" parent="HealthBars/Bar"]
margin_left = 17.0
margin_top = 563.0
margin_right = 271.0
margin_bottom = 588.0
custom_styles/fg = SubResource( 3 )
custom_styles/bg = SubResource( 4 )
value = 50.0
percent_visible = false

[node name="HealthCount" type="Label" parent="HealthBars/Bar"]
margin_left = 25.0
margin_top = 564.0
margin_right = 275.0
margin_bottom = 609.0
rect_scale = Vector2( 0.5, 0.5 )
custom_colors/font_color = Color( 1, 1, 1, 0.811765 )
custom_fonts/font = SubResource( 5 )
text = "100"
valign = 1

[node name="Heart" type="Node2D" parent="HealthBars"]

[node name="HealthBar" type="TextureProgress" parent="HealthBars/Heart"]
margin_left = 18.0
margin_top = 525.0
margin_right = 82.0
margin_bottom = 589.0
value = 100.0
texture_under = ExtResource( 3 )
texture_progress = ExtResource( 2 )
fill_mode = 3
nine_patch_stretch = true

[node name="ShieldBar" type="TextureProgress" parent="HealthBars/Heart"]
margin_left = 18.0
margin_top = 525.0
margin_right = 82.0
margin_bottom = 589.0
value = 50.0
texture_progress = ExtResource( 4 )
fill_mode = 3
nine_patch_stretch = true

[node name="HealthCount" type="Label" parent="HealthBars/Heart"]
self_modulate = Color( 1, 1, 1, 0.498039 )
margin_left = -93.0
margin_top = 542.0
margin_right = 385.0
margin_bottom = 587.0
rect_scale = Vector2( 0.6, 0.6 )
custom_colors/font_color = Color( 1, 1, 1, 0.811765 )
custom_fonts/font = SubResource( 5 )
text = "100"
align = 1
valign = 1

[node name="Plus" type="Node2D" parent="HealthBars"]

[node name="HealthBar" type="TextureProgress" parent="HealthBars/Plus"]
self_modulate = Color( 1, 1, 1, 0.721569 )
margin_left = 17.0
margin_top = 546.0
margin_right = 57.0
margin_bottom = 586.0
value = 100.0
texture_under = ExtResource( 6 )
texture_progress = ExtResource( 5 )
fill_mode = 5
nine_patch_stretch = true

[node name="ShieldBar" type="TextureProgress" parent="HealthBars/Plus"]
self_modulate = Color( 1, 1, 1, 0.721569 )
margin_left = 17.0
margin_top = 546.0
margin_right = 57.0
margin_bottom = 586.0
value = 62.0
texture_progress = ExtResource( 7 )
fill_mode = 5
nine_patch_stretch = true

[node name="HealthCount" type="Label" parent="HealthBars/Plus"]
self_modulate = Color( 1, 1, 1, 0.498039 )
margin_left = 61.0
margin_top = 551.0
margin_right = 539.0
margin_bottom = 596.0
rect_scale = Vector2( 0.6, 0.6 )
custom_colors/font_color = Color( 1, 1, 1, 0.811765 )
custom_fonts/font = SubResource( 5 )
text = "100"
valign = 1

[node name="Number" type="Node2D" parent="HealthBars"]

[node name="HealthBar" type="ProgressBar" parent="HealthBars/Number"]
self_modulate = Color( 1, 1, 1, 0.188235 )
margin_left = 9.0
margin_top = 588.0
margin_right = 24.0
margin_bottom = 602.0
rect_rotation = -89.9999
rect_scale = Vector2( 1, 0.2 )
custom_styles/fg = SubResource( 6 )
custom_styles/bg = SubResource( 7 )
value = 100.0
percent_visible = false

[node name="ShieldBar" type="ProgressBar" parent="HealthBars/Number"]
self_modulate = Color( 1, 1, 1, 0.439216 )
margin_left = 9.0
margin_top = 588.0
margin_right = 24.0
margin_bottom = 602.0
rect_rotation = -89.9999
rect_scale = Vector2( 1, 0.2 )
custom_styles/fg = SubResource( 8 )
custom_styles/bg = SubResource( 7 )
value = 50.0
percent_visible = false

[node name="HealthCount" type="Label" parent="HealthBars/Number"]
self_modulate = Color( 1, 1, 1, 0.498039 )
margin_left = 14.0
margin_top = 566.0
margin_right = 492.0
margin_bottom = 611.0
rect_scale = Vector2( 0.6, 0.6 )
custom_colors/font_color = Color( 1, 1, 1, 0.811765 )
custom_fonts/font = SubResource( 5 )
text = "+ 100"
valign = 1

[node name="ObjectSpawners" type="Node2D" parent="."]
position = Vector2( 497, 276 )

[node name="Blur" type="Sprite" parent="ObjectSpawners"]
material = SubResource( 10 )
position = Vector2( -3.99994, 15.0001 )
scale = Vector2( 1.875, 1.93522 )
texture = ExtResource( 19 )
__meta__ = {
"_edit_lock_": true
}

[node name="Centered" type="Node2D" parent="ObjectSpawners"]
position = Vector2( -497, -276 )
script = ExtResource( 21 )

[node name="Backgrounds" type="Node2D" parent="ObjectSpawners/Centered"]

[node name="BG" type="NinePatchRect" parent="ObjectSpawners/Centered/Backgrounds"]
self_modulate = Color( 1, 1, 1, 0.607843 )
margin_left = 67.0
margin_top = 114.0
margin_right = 773.0
margin_bottom = 522.0
texture = ExtResource( 10 )
patch_margin_left = 3
patch_margin_top = 3
patch_margin_right = 3
patch_margin_bottom = 3
__meta__ = {
"_edit_lock_": true
}

[node name="BG2" type="NinePatchRect" parent="ObjectSpawners/Centered/Backgrounds"]
self_modulate = Color( 1, 1, 1, 0.607843 )
margin_left = 777.0
margin_top = 114.0
margin_right = 948.0
margin_bottom = 522.0
texture = ExtResource( 10 )
patch_margin_left = 3
patch_margin_top = 3
patch_margin_right = 3
patch_margin_bottom = 3

[node name="TabButtons" type="Node2D" parent="ObjectSpawners/Centered"]

[node name="Blocks" type="NinePatchRect" parent="ObjectSpawners/Centered/TabButtons"]
self_modulate = Color( 1, 1, 1, 0.607843 )
margin_left = 68.0
margin_top = 69.0
margin_right = 241.0
margin_bottom = 110.0
rect_pivot_offset = Vector2( 86.5, 20.5 )
texture = ExtResource( 10 )
patch_margin_left = 3
patch_margin_top = 3
patch_margin_right = 3
patch_margin_bottom = 3
script = ExtResource( 18 )
path_tab = NodePath("../../Tabs/Blocks")

[node name="Icon" type="Sprite" parent="ObjectSpawners/Centered/TabButtons/Blocks"]
position = Vector2( 20, 21 )
scale = Vector2( 2.25, 2.25 )
texture = ExtResource( 17 )

[node name="Name" type="Label" parent="ObjectSpawners/Centered/TabButtons/Blocks"]
margin_left = 6.0
margin_top = 5.0
margin_right = 168.0
margin_bottom = 36.0
theme = ExtResource( 12 )
custom_fonts/font = ExtResource( 11 )
text = "blocks"
align = 1
valign = 1

[node name="ClickDetector" type="Button" parent="ObjectSpawners/Centered/TabButtons/Blocks"]
self_modulate = Color( 1, 1, 1, 0 )
margin_right = 173.0
margin_bottom = 41.0

[node name="Mobs" type="NinePatchRect" parent="ObjectSpawners/Centered/TabButtons"]
self_modulate = Color( 1, 1, 1, 0.607843 )
margin_left = 246.0
margin_top = 69.0
margin_right = 419.0
margin_bottom = 110.0
rect_pivot_offset = Vector2( 86.5, 20.5 )
texture = ExtResource( 10 )
patch_margin_left = 3
patch_margin_top = 3
patch_margin_right = 3
patch_margin_bottom = 3
script = ExtResource( 18 )
path_tab = NodePath("../../Tabs/Mobs")

[node name="Icon" type="Sprite" parent="ObjectSpawners/Centered/TabButtons/Mobs"]
position = Vector2( 20, 21 )
scale = Vector2( 2.25, 2.25 )
texture = ExtResource( 16 )

[node name="Name" type="Label" parent="ObjectSpawners/Centered/TabButtons/Mobs"]
margin_left = 6.0
margin_top = 5.0
margin_right = 168.0
margin_bottom = 36.0
theme = ExtResource( 12 )
custom_fonts/font = ExtResource( 11 )
text = "mobs"
align = 1
valign = 1

[node name="ClickDetector" type="Button" parent="ObjectSpawners/Centered/TabButtons/Mobs"]
self_modulate = Color( 1, 1, 1, 0 )
margin_right = 173.0
margin_bottom = 41.0

[node name="Useable" type="NinePatchRect" parent="ObjectSpawners/Centered/TabButtons"]
self_modulate = Color( 1, 1, 1, 0.607843 )
margin_left = 423.0
margin_top = 69.0
margin_right = 596.0
margin_bottom = 110.0
rect_pivot_offset = Vector2( 86.5, 20.5 )
texture = ExtResource( 10 )
patch_margin_left = 3
patch_margin_top = 3
patch_margin_right = 3
patch_margin_bottom = 3
script = ExtResource( 18 )
path_tab = NodePath("../../Tabs/Useable")

[node name="Icon" type="Sprite" parent="ObjectSpawners/Centered/TabButtons/Useable"]
position = Vector2( 20, 21 )
scale = Vector2( 2.25, 2.25 )
texture = ExtResource( 15 )

[node name="Name" type="Label" parent="ObjectSpawners/Centered/TabButtons/Useable"]
margin_left = 6.0
margin_top = 5.0
margin_right = 168.0
margin_bottom = 36.0
theme = ExtResource( 12 )
custom_fonts/font = ExtResource( 11 )
text = "useable"
align = 1
valign = 1

[node name="ClickDetector" type="Button" parent="ObjectSpawners/Centered/TabButtons/Useable"]
self_modulate = Color( 1, 1, 1, 0 )
margin_right = 173.0
margin_bottom = 41.0

[node name="Weapons" type="NinePatchRect" parent="ObjectSpawners/Centered/TabButtons"]
self_modulate = Color( 1, 1, 1, 0.607843 )
margin_left = 600.0
margin_top = 69.0
margin_right = 773.0
margin_bottom = 110.0
rect_pivot_offset = Vector2( 86.5, 20.5 )
texture = ExtResource( 10 )
patch_margin_left = 3
patch_margin_top = 3
patch_margin_right = 3
patch_margin_bottom = 3
script = ExtResource( 18 )
path_tab = NodePath("../../Tabs/Weapons")

[node name="Icon" type="Sprite" parent="ObjectSpawners/Centered/TabButtons/Weapons"]
position = Vector2( 20, 21 )
scale = Vector2( 2.25, 2.25 )
texture = ExtResource( 14 )

[node name="Name" type="Label" parent="ObjectSpawners/Centered/TabButtons/Weapons"]
margin_left = 6.0
margin_top = 5.0
margin_right = 168.0
margin_bottom = 36.0
theme = ExtResource( 12 )
custom_fonts/font = ExtResource( 11 )
text = "Weapons"
align = 1
valign = 1

[node name="ClickDetector" type="Button" parent="ObjectSpawners/Centered/TabButtons/Weapons"]
self_modulate = Color( 1, 1, 1, 0 )
margin_right = 173.0
margin_bottom = 41.0

[node name="Mods" type="NinePatchRect" parent="ObjectSpawners/Centered/TabButtons"]
self_modulate = Color( 1, 1, 1, 0.607843 )
margin_left = 777.0
margin_top = 69.0
margin_right = 946.0
margin_bottom = 110.0
rect_pivot_offset = Vector2( 86.5, 20.5 )
texture = ExtResource( 10 )
patch_margin_left = 3
patch_margin_top = 3
patch_margin_right = 3
patch_margin_bottom = 3
script = ExtResource( 18 )
path_tab = NodePath("../../Tabs/Mods")

[node name="Icon" type="Sprite" parent="ObjectSpawners/Centered/TabButtons/Mods"]
position = Vector2( 20, 21 )
scale = Vector2( 2.25, 2.25 )
texture = ExtResource( 13 )

[node name="Name" type="Label" parent="ObjectSpawners/Centered/TabButtons/Mods"]
margin_left = 6.0
margin_top = 5.0
margin_right = 168.0
margin_bottom = 36.0
theme = ExtResource( 12 )
custom_fonts/font = ExtResource( 11 )
text = "mods"
align = 1
valign = 1

[node name="ClickDetector" type="Button" parent="ObjectSpawners/Centered/TabButtons/Mods"]
self_modulate = Color( 1, 1, 1, 0 )
margin_right = 173.0
margin_bottom = 41.0

[node name="Tabs" type="Node2D" parent="ObjectSpawners/Centered"]

[node name="Blocks" type="Node2D" parent="ObjectSpawners/Centered/Tabs"]
position = Vector2( 424, 303 )
script = ExtResource( 20 )
items_in_tab = [ {
"block_icon": ExtResource( 22 ),
"block_name": "Wood Block",
"block_scene": ExtResource( 24 )
}, {
"block_icon": ExtResource( 25 ),
"block_name": "Ice Block",
"block_scene": ExtResource( 27 )
}, {
"block_icon": ExtResource( 23 ),
"block_name": "bricks",
"block_scene": ExtResource( 26 )
}, {
"block_icon": ExtResource( 28 ),
"block_name": "steel block",
"block_scene": ExtResource( 29 )
}, {
"block_icon": ExtResource( 30 ),
"block_name": "reinforced steel block",
"block_scene": ExtResource( 31 )
}, {
"block_icon": ExtResource( 32 ),
"block_name": "cheese",
"block_scene": ExtResource( 33 )
}, {
"block_icon": ExtResource( 34 ),
"block_name": "radio",
"block_scene": ExtResource( 35 )
}, {
"block_icon": ExtResource( 37 ),
"block_name": "reflection block",
"block_scene": ExtResource( 36 )
} ]

[node name="Items" type="Node2D" parent="ObjectSpawners/Centered/Tabs/Blocks"]

[node name="Mobs" type="Node2D" parent="ObjectSpawners/Centered/Tabs"]
visible = false
position = Vector2( 424, 303 )
script = ExtResource( 20 )

[node name="Items" type="Node2D" parent="ObjectSpawners/Centered/Tabs/Mobs"]

[node name="Useable" type="Node2D" parent="ObjectSpawners/Centered/Tabs"]
visible = false
position = Vector2( 424, 303 )
script = ExtResource( 20 )

[node name="Items" type="Node2D" parent="ObjectSpawners/Centered/Tabs/Useable"]

[node name="Weapons" type="Node2D" parent="ObjectSpawners/Centered/Tabs"]
visible = false
position = Vector2( 424, 303 )
script = ExtResource( 20 )

[node name="Items" type="Node2D" parent="ObjectSpawners/Centered/Tabs/Weapons"]

[node name="Mods" type="Node2D" parent="ObjectSpawners/Centered/Tabs"]
visible = false
position = Vector2( 424, 303 )
script = ExtResource( 20 )

[node name="Items" type="Node2D" parent="ObjectSpawners/Centered/Tabs/Mods"]

[node name="NameShower" type="Node2D" parent="ObjectSpawners/Centered"]
modulate = Color( 1, 1, 1, 0 )
rotation = 0.174533

[node name="Name" type="Label" parent="ObjectSpawners/Centered/NameShower"]
margin_left = 12.0
margin_top = 15.0
margin_right = 161.0
margin_bottom = 45.0
theme = ExtResource( 12 )
text = "butt fart 678"

[node name="Sided" type="Node2D" parent="ObjectSpawners"]
position = Vector2( -497, -276 )
